--- a/fundamentos/3-introducao-a-html-e-css/2-html-e-css-primeiros-passos-em-css/exercicio-aula-3-2/exercicio3-2.html
+++ b/fundamentos/3-introducao-a-html-e-css/2-html-e-css-primeiros-passos-em-css/exercicio-aula-3-2/exercicio3-2.html
@@ -5,6 +5,7 @@
 
     font-size: 65px ;
     color: orange;
+    font-family: sans-serif;
 
     }
 
@@ -20,6 +21,30 @@
 
     }
 
+    p {
+        font-weight: 600;
+        font-size: 3em;
+        text-align: center;
+        ;
+
+    }
+
+    body {
+        font-size: 16px;
+        line-height: 40px;
+        
+    }
+
+    ul {
+        text-decoration:underline;
+        color: antiquewhite;
+    }
+
+    .itens-lista {
+
+        background-color: antiquewhite;
+    }
+
 </style>
   <head>
     <meta charset="UTF-8">
@@ -29,10 +54,10 @@
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="class-background-color">Qual é a sua cor favorita?</p>
-    <ul class="class-background-color"></ulp>>
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+    <ul class="class-background-color">
+      <li class="itens-lista">Amarelo</li>
+      <li class="itens-lista">Vermelho</li>
+      <li class="itens-lista">Marrom</li>
     </ul>
   </body>
 </html>
