--- a/fundamentos/5-JavaScript:DOM-Eventos-e-Web-Storage/2-JS-trabalhando-com-elementos/index.html
+++ b/fundamentos/5-JavaScript:DOM-Eventos-e-Web-Storage/2-JS-trabalhando-com-elementos/index.html
@@ -103,16 +103,36 @@
         elementUl.appendChild(elementLi);
       }
 
-      // Adicione 3 tags h3 , todas sendo filhas do main criado no passo 2.
+      // 9- Adicione 3 tags h3 , todas sendo filhas do main criado no passo 2.
       for(i = 0; i < 3 ; i += 1) {
         const elementH3 = document.createElement('h3');
         elementH3.innerHTML = 'show ' + i;
         elementMain.appendChild(elementH3)
       }
 
+      // Agora que você criou muita coisa, vamos fazer algumas alterações e remoções:
 
+      // 1- Adicione a classe title na tag h1 criada;
+      elementH1.className = 'title';
 
+      // 2- Adicione a classe description nas 3 tags h3 criadas;
+      const elementsH3 = document.getElementsByTagName('h3');
+      for (i = 0; i < elementsH3.length; i += 1) {
+        elementsH3[i].className = 'description';
+      }
 
+      // 3- Remova a section criado no passo 5 (aquele que possui a classe left-content ). Utilize a função .removeChild() ;
+      elementMain.removeChild(elementLeft)
+
+      // 4- Centralize a section criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto da section ;
+      elementRight.style.marginRight = 'auto';
+
+      // 5- Troque a cor de fundo do elemento pai da section criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
+      elementCenter.parentNode.style.backgroundColor = 'green'
+      
+      // 6- Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8. 
+      elementUl.lastChild.remove()
+      elementUl.lastChild.remove()
     </script>
   </body>
 </html>
